5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4139/executions/1664_1398.log
== TEST (2019-04-16 10:12:01) 
-- CODE:
m = float(input("minutos de voo:"))

n = m%200

#if(m>200):
	#c = 
#else:
	#c = m

print(n)
-- OUTPUT:
121.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:12:24) 
-- CODE:
m = float(input("minutos de voo:"))

n = m%200

#if(m>200):
	#c = 
#else:
	#c = m

print(n)
-- OUTPUT:
121.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:12:50) 
-- CODE:
m = float(input("minutos de voo:"))

n = m//200

#if(m>200):
	#c = 
#else:
	#c = m

print(n)
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:14:49) 
-- CODE:
m = float(input("minutos de voo:"))

n = m%200

#if(m>200):
	#c = 
#else:
	#c = m

print(n)
-- OUTPUT:
121.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:19:53) 
-- CODE:
m = float(input("minutos de voo:"))

n = m%200

if(m>200):
	c = ((m-n)*100)+(n*90)
else:
	c = ((m*100) + 5000)

print(round(c,2)
-- ERROR:
File "XXXX", line 11
    
                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:20:39) 
-- CODE:
m = float(input("minutos de voo:"))

n = m%200

if(m>200):
	c = ((m-n)*100)+(n*90)
else:
	c = ((m*100) + 5000)

print(round(c,2)
-- ERROR:
File "XXXX", line 11
    
                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:20:48) 
-- CODE:
m = float(input("minutos de voo:"))

n = m%200

if(m>200):
	c = ((m-n)*100)+(n*90)
else:
	c = ((m*100) + 5000)

print(round(c,2))
-- OUTPUT:
17100.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:21:25) 
-- CODE:
m = float(input("minutos de voo:"))

n = m%200

if(m>200):
	c = ((m-n)*100)+(n*90)+8000
else:
	c = ((m*100) + 5000)

print(round(c,2))
-- OUTPUT:
17100.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:30:08) 
-- CODE:
m = float(input("minutos de voo:"))

n = m%200

if(m>200):
	c = ((m-n)*100)+(n*90)+8000
else:
	c = ((m*100) + 5000)

print(round(c,2))
-- OUTPUT:
17100.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:30:42) 
-- CODE:
m = float(input("minutos de voo:"))

n = m%200

if(m>200):
	c = ((m-n)*100)+(n*90)+8000
else:
	c = ((m*100) + 5000)

print(round(c,2))
-- EXECUTION TIME:
0.117806
-- TEST CASE 1:
---- input:
121
---- correct output:
17100.0
---- user output:
17100.0
-- TEST CASE 2:
---- input:
450
---- correct output:
50500.0
---- user output:
52500.0
-- TEST CASE 3:
---- input:
1
---- correct output:
5100.0
---- user output:
5100.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
